# StrataSolutions

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  GridFactory.hpp  main.cpp
src/ConcreteProblem/: BoundaryConditions.hpp  InitialCondition.hpp  ProblemFactory.hpp  SimpleProblemFactory.hpp
src/ConcreteProblems/: FactoryWithSource.hpp  SelfSimilarProblem.hpp  SimpleProblemFactory.hpp
src/Grid/: Defines.h  StructuredGrid1D.h  StructuredGrid2D.h  TemporalGrid.h  UniformGrid1D.h  UniformGrid2D.h  UniformGridFactory.hpp  grid1D.h
src/Properties/: Coefficients.hpp
src/Solver/: BoundaryConditions.hpp  Solver.hpp  State2D.hpp
src/Solver/SplittingMethod/: BaseSplit.hpp  Solver.hpp  SplitX.hpp  SplitY.hpp
test/: CMakeLists.txt  grid1D_test.cpp  grid2D_test.cpp  grid_test.cpp  solver_test.cpp  splitting_solver_FactoryWithSource.cpp  splitting_solver_SelfSimilarProblem.cpp  splitting_solver_SimpleProblem.cpp  splitting_solver_test.cpp  splitting_solver_test_copy.cpp  splitx_test.cpp
